fixed gap in images

--- a/static/css/home_page_style.css
+++ b/static/css/home_page_style.css
@@ -71,9 +71,9 @@
     margin-top: 5px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
+    justify-content: flex-start;
     margin-left: 2px;
+    margin-bottom: 0px;
 }
 
 .pagination_buttons_vertical a {
